[package]
name = "dk_server"
version = "0.1.0"
authors = ["Gexon"]

[[bin]]
name = "dk_server"

[dependencies]
mysql = "7.1.2"
mio = "0.6.0"
byteorder = "0.5.3"
slab = "0.3.0"
time = "0.1.35"
log = "0.3.6"
slog = "1.1.0"
slog-stream = "1.1.0"
slog-stdlog = "1.1.0"
tinyecs = { git = "https://github.com/not-fl3/tinyecs.git", branch = "WIP_macro_refactoring" }