[package]
name = "dk_server"
version = "0.1.0"
authors = ["Gexon"]

[[bin]]
name = "dk_server"

[dependencies]
rand="0.3.0"
getopts="*"
mysql = "7.1.2"
mio = "0.6.6"
tinyecs = { git = "https://github.com/not-fl3/tinyecs.git", branch = "WIP_macro_refactoring" }
slog = "1.3.0"
slog-stream = "1.2.0"
slog-stdlog = "1.1.0"
log = "0.3.6"
byteorder = "0.5.3"
bytes = "0.4.2"
slab = "0.3.0"
time = "0.1.35"
bincode = "0.6.0"
rustc-serialize = "0.3.21"
tokio-core = "0.1.6"
tokio-io = "0.1.1"
futures = "0.1.13"